update articles and AboutMe

--- a/about/index.html
+++ b/about/index.html
@@ -122,12 +122,17 @@
 <ul>
 <li>
 <ul>
-<li><a href="#about-me">About Me</a>
+<li><a href="#about-me">ABOUT ME</a>
 <ul>
+<li><a href="#基本信息">基本信息</a></li>
+<li><a href="#工作经验">工作经验</a></li>
+<li><a href="#技能评估">技能评估</a></li>
+<li><a href="#项目经验">项目经验</a></li>
 <li><a href="#target-article">target article:</a>
 <ul>
 <li><a href="#php">php</a></li>
 <li><a href="#python">python</a></li>
+<li><a href="#hugo">hugo</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
@@ -162,13 +167,117 @@
 
             
 
-<h3 id="about-me">About Me</h3>
+<h3 id="about-me">ABOUT ME</h3>
 
-<p>Name: liangliang.too</p>
+<h4 id="基本信息">基本信息</h4>
 
-<p>Age: 24</p>
+<table>
+<thead>
+<tr>
+<th align="center"></th>
+<th align="center"></th>
+<th></th>
+</tr>
+</thead>
 
-<p>Education: Undergraduate</p>
+<tbody>
+<tr>
+<td align="center">Name</td>
+<td align="center">liangliang.too</td>
+<td></td>
+</tr>
+
+<tr>
+<td align="center">Age</td>
+<td align="center">24</td>
+<td></td>
+</tr>
+
+<tr>
+<td align="center">Education</td>
+<td align="center">大学本科</td>
+<td></td>
+</tr>
+
+<tr>
+<td align="center">Phone</td>
+<td align="center">136****1685</td>
+<td></td>
+</tr>
+
+<tr>
+<td align="center">Email1</td>
+<td align="center">liangliang.too@gmail.com</td>
+<td></td>
+</tr>
+
+<tr>
+<td align="center">Email2</td>
+<td align="center">354409101@qq.com</td>
+<td></td>
+</tr>
+
+<tr>
+<td align="center">Address</td>
+<td align="center">广州黄埔</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+
+<h4 id="工作经验">工作经验</h4>
+
+<ul>
+<li>广东臻创科技<br />
+
+<ul>
+<li>2017.05 - 2017.09<br /></li>
+<li>研发部 php后台工程师(实习)</li>
+<li>项目</li>
+</ul></li>
+<li>广州外语通
+
+<ul>
+<li>2018.08 - 2019.01</li>
+<li>技术研发部 php后台工程师</li>
+<li>项目</li>
+</ul></li>
+</ul>
+
+<h4 id="技能评估">技能评估</h4>
+
+<ul>
+<li>基本前端知识，html, css, javascript</li>
+<li>使用过前端框架Vue及其一些组件，会基础应用</li>
+<li>熟悉php，有一定项目经验，热爱前后端分离的开发模式
+
+<ul>
+<li>主要使用框架ThinkPHP 5.0</li>
+<li>接触过 Slim 框架</li>
+</ul></li>
+<li>熟悉sql语句，主要使用MySQL</li>
+<li>主要使用Git版本控制，在司时间根据公司要求也使用过SVN</li>
+<li>有类Unix系统使用经验，能在命令行环境下存活（本人使用MacBook）</li>
+<li>喜欢python，写过爬虫和日常脚本</li>
+</ul>
+
+<h4 id="项目经验">项目经验</h4>
+
+<ul>
+<li>广东臻创 东莞理工学院计算机学院党组织部系统</li>
+<li>广东臻创 东莞市产权交易中心二期</li>
+<li>广州外语通 IPTV项目
+
+<ul>
+<li>安徽电信，安全评估</li>
+<li>广东广电，新支付接口</li>
+<li>湖北广电，后台重写</li>
+</ul></li>
+<li>广州外语通 公司项目 新版故事机后台（重构）</li>
+<li>毕设 旅游路线规划系统</li>
+</ul>
+
+<hr />
 
 <h4 id="target-article">target article:</h4>
 
@@ -179,6 +288,8 @@
 <li><label><input type="checkbox" disabled class="task-list-item"> pipe 管道 / 中间件</label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> container 容器</label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> slim 框架基础使用</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> 页面缓存</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> php://input</label></li>
 </ul>
 
 <h5 id="python">python</h5>
@@ -187,9 +298,22 @@
 <li><label><input type="checkbox" disabled class="task-list-item"> 图床脚本，<a href="https://sm.ms/doc/">https://sm.ms/doc/</a>
 
 <ul class="task-list">
-<li><label><input type="checkbox" checked disabled class="task-list-item"> 代码实现</label></li>
+<li><label><input type="checkbox" checked disabled class="task-list-item"> <del>代码实现</del></label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> 文章编写</label></li>
 </ul></label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> SM.MS图床已上传图片列表
+
+<ul class="task-list">
+<li><label><input type="checkbox" disabled class="task-list-item"> 代码实现</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> 文章编写</label></li>
+</ul></label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> python 生成字符画</label></li>
+</ul>
+
+<h5 id="hugo">hugo</h5>
+
+<ul class="task-list">
+<li><label><input type="checkbox" disabled class="task-list-item"> hugo基本使用，仅作为存档记录使用</label></li>
 </ul>
 
 	
