--- a/about/index.html
+++ b/about/index.html
@@ -55,8 +55,6 @@
   
 
   
-    <link rel="stylesheet" type="text/css" href="/css/my-categories.css">
-  
 
   
 
@@ -74,7 +72,7 @@
 	
 
     <h1 class="brand-title">liangliang.too</h1>
-    <h2 class="brand-tagline">Talk is cheap, show me your codes.</h2>
+    <h2 class="brand-tagline">如果，这位旅客失去了梦想...</h2>
 
     <nav class="nav">
       <ul class="nav-list">
@@ -128,6 +126,9 @@
 <li><a href="#工作经验">工作经验</a></li>
 <li><a href="#技能评估">技能评估</a></li>
 <li><a href="#项目经验">项目经验</a></li>
+</ul></li>
+<li><a href="#自我评价">自我评价</a>
+<ul>
 <li><a href="#target-article">target article:</a>
 <ul>
 <li><a href="#php">php</a></li>
@@ -277,6 +278,14 @@
 <li>毕设 旅游路线规划系统</li>
 </ul>
 
+<h3 id="自我评价">自我评价</h3>
+
+<p>/ 理想主义者 / 理性最重要了 / 我思故我在 / 多想一下</p>
+
+<p>/ 假装阿宅 / 热爱技术 / 伪文青 / 喜欢后摇 / php是世界上最好的语言（笑）</p>
+
+<p>/ 心跳呼吸正常</p>
+
 <hr />
 
 <h4 id="target-article">target article:</h4>
@@ -290,6 +299,7 @@
 <li><label><input type="checkbox" disabled class="task-list-item"> slim 框架基础使用</label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> 页面缓存</label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> php://input</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> 邮件收发</label></li>
 </ul>
 
 <h5 id="python">python</h5>
@@ -308,6 +318,7 @@
 <li><label><input type="checkbox" disabled class="task-list-item"> 文章编写</label></li>
 </ul></label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> python 生成字符画</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> 邮件收发</label></li>
 </ul>
 
 <h5 id="hugo">hugo</h5>
