Just to brush green dots

--- a/about/index.html
+++ b/about/index.html
@@ -300,6 +300,10 @@
 <li><label><input type="checkbox" disabled class="task-list-item"> 页面缓存</label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> php://input</label></li>
 <li><label><input type="checkbox" disabled class="task-list-item"> 邮件收发</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> jwt应用——ThinkPHP 5.1 为例</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> 流媒体播放，以及如何限流</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> 搭建提供api的图床</label></li>
+<li><label><input type="checkbox" disabled class="task-list-item"> 图片blog，拓展: 视频</label></li>
 </ul>
 
 <h5 id="python">python</h5>
